# BrickGames

src/: Makefile
src/brick_game/snake/: controller_qt.h  snake.h
src/gui/cli/: console_menu.cc
src/gui/cli/snake/: console_snake.cc  console_view.h
src/gui/cli/tetris/: frontend_tetris.cc
src/gui/desktop/Menu_QT/: CMakeLists.txt  main.cpp  menuwindow.cpp  menuwindow.h  menuwindow.ui
src/gui/desktop/Snake_QT/: CMakeLists.txt  CMakeLists.txt.user.c982953  gamefield.cpp  gamefield.h  gameoverfield.cpp  gameoverfield.h  main.cpp  snakewindow.cpp  snakewindow.h  textfield.cpp  textfield.h
src/gui/desktop/Snake_QT/resources/: resources.qrc
src/gui/desktop/Tetris_QT/: CMakeLists.txt  gamefield.cpp  gamefield.h  gameoverfield.cpp  main.cpp  tetriswindow.cpp  textfield.cpp
src/tests/: test_snake.cc
